# nyankodiscordbot-poise

./: BUILD.bazel  Cargo.toml  shell.nix
.cargo/: config.toml
data/: 312.json  412.json
src/: main.rs
src/commands/: code.rs  mod.rs  music.rs  random.rs  subject.rs  then.rs  uwu.rs  vc.rs
src/proto/: nyanko.proto
