[package]
name = "nyankodiscordbot-poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.1.0"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros","full"] }
url = { version = "2.2.2", features = ["serde"] }

songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "next", features = [
    "gateway",
    "serenity",
    "builtin-queue"
] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
chrono = "0.4.19"
anyhow = "1.0.57"
thiserror = "1.0.31"
# [patch.crates-io]
# serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
tag = "v0.11.1"
default-features = false
features = [
    "voice",
    "rustls_backend",
    "client",
    "builder",
    "cache",
    "utils",
    "model",
    "http",
    "gateway",
]

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.1"}


[dependencies.thenconvert]
path = "../thenconvert"

[dependencies.subjectlib]
path = "../subjectlib"
