[package]
name = "nyankodiscordbot-poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.1.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros","full"] }
url = { version = "2.2.2", features = ["serde"] }

songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "next", features = [
    "gateway",
    "serenity",
    "builtin-queue"
] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
thiserror = "1.0.31"
rand={ version = "0.8.5", features = ["std","alloc","std_rng","getrandom"] }
rand_chacha = "0.3.1"
owoify_rs = "1.0.0"
humantime = "2.1.0"
chrono = "0.4.19"
# [patch.crates-io]
# serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
tag = "0.11.2"
default-features = false
features = [
    "voice",
    "rustls_backend",
    "client",
    "builder",
    "cache",
    "utils",
    "model",
    "http",
    "gateway",
]

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.2"}


[dependencies.thenconvert]
path = "../thenconvert"

[dependencies.subjectlib]
path = "../subjectlib"
